--- a/images/manifest.json
+++ b/images/manifest.json
@@ -6,6 +6,63 @@
   "type" : "Manifest",
   "@context" : "http://iiif.io/api/presentation/3/context.json",
   "items" : [ {
+    "width" : 3302,
+    "id" : "https://Richel325.github.io/TempleMurals/images/RS39706/canvas/",
+    "label" : {
+      "none" : [ "RS39706" ]
+    },
+    "type" : "Canvas",
+    "items" : [ {
+      "id" : "https://Richel325.github.io/TempleMurals/images/RS39706/AnnoPage/",
+      "type" : "AnnotationPage",
+      "items" : [ {
+        "motivation" : "Painting",
+        "id" : "https://Richel325.github.io/TempleMurals/images/RS39706/annotation/",
+        "type" : "Annotation",
+        "body" : {
+          "service" : [ {
+            "tiles" : [ {
+              "scaleFactors" : [ 32, 16, 8, 4, 2, 1 ],
+              "width" : 1024,
+              "height" : 1024
+            } ],
+            "protocol" : "http://iiif.io/api/image",
+            "sizes" : [ {
+              "width" : 104,
+              "height" : 83
+            }, {
+              "width" : 207,
+              "height" : 165
+            }, {
+              "width" : 413,
+              "height" : 330
+            }, {
+              "width" : 826,
+              "height" : 660
+            }, {
+              "width" : 1651,
+              "height" : 1320
+            }, {
+              "width" : 3302,
+              "height" : 2640
+            } ],
+            "profile" : "http://iiif.io/api/image/2/level0.json",
+            "width" : 3302,
+            "@id" : "https://Richel325.github.io/TempleMurals/images/RS39706",
+            "@context" : "http://iiif.io/api/image/2/context.json",
+            "height" : 2640
+          } ],
+          "format" : "image/jpeg",
+          "width" : 3302,
+          "id" : "https://Richel325.github.io/TempleMurals/images/RS39706/full/full/0/default.jpg",
+          "type" : "Image",
+          "height" : 2640
+        },
+        "target" : "https://Richel325.github.io/TempleMurals/images/RS39706/canvas/"
+      } ]
+    } ],
+    "height" : 2640
+  }, {
     "width" : 4800,
     "id" : "https://Richel325.github.io/TempleMurals/images/RS39709/canvas/",
     "label" : {
